external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:3:11
  │
3 │         0 {} = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'

error[E03022]: invalid usage position
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:5:9
  │
5 │         foo() = 0;
  │         ^^^ Expected a struct, but found function 'foo' in current scope

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:5:9
  │
5 │         foo() = 0;
  │         ^^^^^ Positional fields are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01009]: invalid assignment
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:7:9
  │
7 │         foo().bar() = 0;
  │         ^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
