external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move
module 0x42::M {
    fun foo() {
        0 {} = 0;

        foo() = 0;

        foo().bar() = 0;
    }
}
